--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
         </ul>
         <ul>
           <li>
-            <img src="./images/potfolio-images/img1.jpg" alt="Технокряк"  width="370"
+            <img src="images/potfolio-images/img1.jpg" alt="Технокряк"  width="370"
               height="292">
             <p>Технокряк</p>
             <a href="">Веб-сайт</a>
