--- a/portfolio.html
+++ b/portfolio.html
@@ -37,47 +37,92 @@
         </ul>
         <ul>
           <li>
-            <img src="./images/potfolio-images/img1.jpg" alt="Технокряк" width="370" height="292">
+            <img
+              src="./images/potfolio-images/img1.jpg"
+              alt="Технокряк"
+              width="370"
+              height="292"
+            />
             <p>Технокряк</p>
             <a href="">Веб-сайт</a>
           </li>
           <li>
-            <img src="./images/potfolio-images/img2.jpg" alt="Постер с представителями команд" width="370" height="292">
+            <img
+              src="./images/potfolio-images/img2.jpg"
+              alt="Постер с представителями команд"
+              width="370"
+              height="292"
+            />
             <p>Постер<span lang="en"> New Orlean vs Golden Star</span></p>
             <a href="">Дизайн</a>
           </li>
           <li>
-            <img src="./images/potfolio-images/img3.jpg" alt="Логотип ресторана" width="370" height="292">
+            <img
+              src="./images/potfolio-images/img3.jpg"
+              alt="Логотип ресторана"
+              width="370"
+              height="292"
+            />
             <p>Ресторан <span lang="en">Seafood</span></p>
             <a href="">Приложение</a>
           </li>
           <li>
-            <img src="./images/potfolio-images/img4.jpg" alt="Наушники" width="370" height="292">
+            <img
+              src="./images/potfolio-images/img4.jpg"
+              alt="Наушники"
+              width="370"
+              height="292"
+            />
             <p>Проект <span lang="en">Prime</span></p>
             <a href="">Маркетинг</a>
           </li>
           <li>
-            <img src="./images/potfolio-images/img5.jpg" alt="Коробки" width="370" height="292">
+            <img
+              src="./images/potfolio-images/img5.jpg"
+              alt="Коробки"
+              width="370"
+              height="292"
+            />
             <p>Проект <span lang="en">Boxes</span></p>
             <a href="">Приложение</a>
           </li>
           <li>
-            <img src="./images/potfolio-images/img6.jpg" alt="Изображение сайта" width="370" height="292">
-            <p> <span lang="en">Inspiration has no Borders</span></p>
+            <img
+              src="./images/potfolio-images/img6.jpg"
+              alt="Изображение сайта"
+              width="370"
+              height="292"
+            />
+            <p><span lang="en">Inspiration has no Borders</span></p>
             <a href="">Веб-сайт</a>
           </li>
           <li>
-            <img src="./images/potfolio-images/img7.jpg" alt="Изображение журнала" width="370" height="260">
+            <img
+              src="./images/potfolio-images/img7.jpg"
+              alt="Изображение журнала"
+              width="370"
+              height="260"
+            />
             <p>Издание <span lang="en">Limited Edition</span></p>
             <a href="">Дизайн</a>
           </li>
           <li>
-            <img src="./images/potfolio-images/img8.jpg" alt="Изображение бирки с логотипом" width="370" height="292">
+            <img
+              src="./images/potfolio-images/img8.jpg"
+              alt="Изображение бирки с логотипом"
+              width="370"
+              height="292"
+            />
             <p>Проект <span lang="en">LAB</span></p>
             <a href="">Маркетинг</a>
           </li>
           <li>
-            <img src="./images/potfolio-images/img9.jpg" alt="Работа за компьютером" width="270" height="292">
+            <img
+              src="./images/potfolio-images/img9.jpg"
+              alt="Работа за компьютером"
+              width="270"
+              height="292"
+            />
             <p><span lang="en">Growing Business</span></p>
             <a href="">Приложение</a>
           </li>
@@ -85,18 +130,23 @@
       </section>
     </main>
     <!--footer-->
-    <footer><a href="index.html" lang="en"> WebStudio</a>
-    <address>
-      <ul>
-        <li>
-          <a href="https://goo.gl/maps/ka6gXYY2GY19vVcMA" target="_blank">г. Киев, пр-т Леси Украинки, 26</a>
-        </li>
-        <li>
-          <a href="mailto:info@example.com">info@example.com</a>
-        </li>
-        <li>
-          <a href="tel:+380991111111">+38 099 111 11 11</a>
-        </li>
-      </ul></footer>
+    <footer>
+      <a href="index.html" lang="en"> WebStudio</a>
+      <address>
+        <ul>
+          <li>
+            <a href="https://goo.gl/maps/ka6gXYY2GY19vVcMA" target="_blank"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li>
+            <a href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
