--- a/index.html
+++ b/index.html
@@ -10,30 +10,44 @@
     <!-- header-->
     <header>
       <nav>
-        <a href="index.html" lang="en"> WebStudio</a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a href="index.html" lang="en" class="logo-text"
+          ><span class="logo-part">Web</span>Studio</a
+        >
+        <ul class="nav-list">
+          <li><a href="" class="nav-list-element-1">Студия</a></li>
+          <li>
+            <a href="./portfolio.html" class="nav-list-element-2">Портфолио</a>
+          </li>
+          <li><a href="" class="nav-list-element-3">Контакты</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="nav-adress-list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="mail-address-webstudio"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="tel-address-webstudio"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <!-- main-->
     <main>
       <!-- section with button-->
-      <section>
+      <section class="section-with-button">
         <div>
-          <h1>
+          <h1 class="our-slogan">
             Эффективные решения<br />
             для вашего бизнеса
           </h1>
-          <button type="button">Заказать услугу</button>
+          <button type="button" class="button-to-order-servise">
+            <span class="button-to-order-servise-text">Заказать услугу</span>
+          </button>
         </div>
       </section>
       <!-- section our qualities-->
@@ -151,7 +165,9 @@
     </main>
     <!--footer-->
     <footer>
-      <a href="index.html" lang="en"> WebStudio</a>
+      <a href="index.html" lang="en" class="logo-text"
+        ><span class="logo-part">Web</span>Studio</a
+      >
       <address>
         <ul>
           <li>
