--- a/portfolio.html
+++ b/portfolio.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <!--head-->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
+  <!--body-->
   <body>
     <!--header-->
     <header>
       <nav>
-        <a href="index.html" lang="en"> WebStudio</a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a href="index.html" lang="en" class="logo-text"
+          ><span class="logo-part">Web</span>Studio</a
+        >
+        <ul class="nav-list">
+          <li><a href="" class="nav-list-element-1">Студия</a></li>
+          <li>
+            <a href="./portfolio.html" class="nav-list-element-2">Портфолио</a>
+          </li>
+          <li><a href="" class="nav-list-element-3">Контакты</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="nav-adress-list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="mail-address-webstudio"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="tel-address-webstudio"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
@@ -132,7 +146,9 @@
     </main>
     <!--footer-->
     <footer>
-      <a href="index.html" lang="en"> WebStudio</a>
+      <a href="index.html" lang="en" class="logo-text"
+        ><span class="logo-part">Web</span>Studio</a
+      >
       <address>
         <ul>
           <li>
