--- a/index.html
+++ b/index.html
@@ -171,22 +171,29 @@
       </section>
     </main>
     <!--footer-->
-    <footer>
+    <footer class="webstudio-footer">
       <a href="index.html" lang="en" class="logo-text"
         ><span class="logo-part">Web</span>Studio</a
       >
       <address>
-        <ul>
-          <li>
-            <a href="https://goo.gl/maps/ka6gXYY2GY19vVcMA" target="_blank"
+        <ul class="webstudio-footer-list">
+          <li class="webstudio-footer-list-items">
+            <a
+              href="https://goo.gl/maps/ka6gXYY2GY19vVcMA"
+              target="_blank"
+              class="maps-location"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+          <li class="webstudio-footer-list-items">
+            <a href="mailto:info@example.com" class="mail-address-info"
+              >info@example.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+          <li class="webstudio-footer-list-items">
+            <a href="tel:+380991111111" class="tel-address-webstudio"
+              >+38 099 111 11 11</a
+            >
           </li>
         </ul>
       </address>
