--- a/portfolio.html
+++ b/portfolio.html
@@ -8,30 +8,34 @@
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <!--body-->
-  <body>
+  <body class="potfolio-body">
     <!--header-->
-    <header>
+    <header class="portfolio-header">
       <nav>
         <a href="index.html" lang="en" class="logo-text"
           ><span class="logo-part">Web</span>Studio</a
         >
         <ul class="nav-list">
-          <li><a href="" class="nav-list-element-1">Студия</a></li>
+          <li><a href="" class="portfolio-nav-list-element-1">Студия</a></li>
           <li>
-            <a href="./portfolio.html" class="nav-list-element-2">Портфолио</a>
+            <a href="./portfolio.html" class="portfolio-nav-list-element-2"
+              >Портфолио</a
+            >
           </li>
-          <li><a href="" class="nav-list-element-3">Контакты</a></li>
+          <li><a href="" class="portfolio-nav-list-element-3">Контакты</a></li>
         </ul>
       </nav>
       <address>
-        <ul class="nav-adress-list">
+        <ul class="portfolio-nav-adress-list">
           <li>
-            <a href="mailto:info@devstudio.com" class="mail-address-webstudio"
+            <a
+              href="mailto:info@devstudio.com"
+              class="portfolio-mail-address-webstudio"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+380961111111" class="tel-address-webstudio"
+            <a href="tel:+380961111111" class="portfolio-tel-address-webstudio"
               >+38 096 111 11 11</a
             >
           </li>
@@ -145,22 +149,29 @@
       </section>
     </main>
     <!--footer-->
-    <footer>
+    <footer class="portfolio-footer">
       <a href="index.html" lang="en" class="logo-text"
         ><span class="logo-part">Web</span>Studio</a
       >
       <address>
-        <ul>
-          <li>
-            <a href="https://goo.gl/maps/ka6gXYY2GY19vVcMA" target="_blank"
+        <ul class="portfolio-footer-list">
+          <li class="portfolio-footer-list-items">
+            <a
+              href="https://goo.gl/maps/ka6gXYY2GY19vVcMA"
+              target="_blank"
+              class="maps-location"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+          <li class="portfolio-footer-list-items">
+            <a href="mailto:info@example.com" class="mail-address-info"
+              >info@example.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+          <li class="portfolio-footer-list-items">
+            <a href="tel:+380991111111" class="tel-address-webstudio"
+              >+38 099 111 11 11</a
+            >
           </li>
         </ul>
       </address>
