add styles to all portfolio file

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,105 +45,158 @@
     <!--main-->
     <main>
       <!--portfolio section-->
-      <section>
+      <section class="portfolio-main-section">
         <h1 hidden>portfolio</h1>
-        <ul>
-          <li><a href="">Все</a></li>
-          <li><a href="">Веб-сайты</a></li>
-          <li><a href="">Приложения</a></li>
-          <li><a href="">Дизайн</a></li>
-          <li><a href="">Маркетинг</a></li>
-        </ul>
-        <ul>
+        <!--part with buttons-->
+        <ul class="portfolio-main-section-list-with-buttons">
           <li>
+            <button type="button" class="portfolio-main-section-button-blue">
+              <a href="" class="portfolio-main-section-buttons-text">Все</a>
+            </button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-main-section-button">
+              <a href="" class="portfolio-main-section-buttons-text"
+                >Веб-сайты</a
+              >
+            </button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-main-section-button">
+              <a href="" class="portfolio-main-section-buttons-text"
+                >Приложения</a
+              >
+            </button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-main-section-button">
+              <a href="" class="portfolio-main-section-buttons-text">Дизайн</a>
+            </button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-main-section-button">
+              <a href="" class="portfolio-main-section-buttons-text"
+                >Маркетинг</a
+              >
+            </button>
+          </li>
+        </ul>
+        <!--part with pictures-->
+        <ul class="portfolio-main-section-list-with-pictures">
+          <li class="portfolio-main-section-list-with-pictures-items">
             <img
               src="./images/potfolio-images/img1.jpg"
               alt="Технокряк"
               width="370"
               height="292"
+              class="portfolio-main-section-pictures"
             />
-            <p>Технокряк</p>
-            <a href="">Веб-сайт</a>
+            <p class="portfolio-main-section-pictures-description">Технокряк</p>
+            <a href="" class="portfolio-main-section-list-links">Веб-сайт</a>
           </li>
-          <li>
+          <li class="portfolio-main-section-list-with-pictures-items">
             <img
               src="./images/potfolio-images/img2.jpg"
               alt="Постер с представителями команд"
               width="370"
               height="292"
+              class="portfolio-main-section-pictures"
             />
-            <p>Постер<span lang="en"> New Orlean vs Golden Star</span></p>
-            <a href="">Дизайн</a>
+            <p class="portfolio-main-section-pictures-description">
+              Постер<span lang="en"> New Orlean vs Golden Star</span>
+            </p>
+            <a href="" class="portfolio-main-section-list-links">Дизайн</a>
           </li>
-          <li>
+          <li class="portfolio-main-section-list-with-pictures-items">
             <img
               src="./images/potfolio-images/img3.jpg"
               alt="Логотип ресторана"
               width="370"
               height="292"
+              class="portfolio-main-section-pictures"
             />
-            <p>Ресторан <span lang="en">Seafood</span></p>
-            <a href="">Приложение</a>
+            <p class="portfolio-main-section-pictures-description">
+              Ресторан <span lang="en">Seafood</span>
+            </p>
+            <a href="" class="portfolio-main-section-list-links">Приложение</a>
           </li>
-          <li>
+          <li class="portfolio-main-section-list-with-pictures-items">
             <img
               src="./images/potfolio-images/img4.jpg"
               alt="Наушники"
               width="370"
               height="292"
+              class="portfolio-main-section-pictures"
             />
-            <p>Проект <span lang="en">Prime</span></p>
-            <a href="">Маркетинг</a>
+            <p class="portfolio-main-section-pictures-description">
+              Проект <span lang="en">Prime</span>
+            </p>
+            <a href="" class="portfolio-main-section-list-links">Маркетинг</a>
           </li>
-          <li>
+          <li class="portfolio-main-section-list-with-pictures-items">
             <img
               src="./images/potfolio-images/img5.jpg"
               alt="Коробки"
               width="370"
               height="292"
+              class="portfolio-main-section-pictures"
             />
-            <p>Проект <span lang="en">Boxes</span></p>
-            <a href="">Приложение</a>
+            <p class="portfolio-main-section-pictures-description">
+              Проект <span lang="en">Boxes</span>
+            </p>
+            <a href="" class="portfolio-main-section-list-links">Приложение</a>
           </li>
-          <li>
+          <li class="portfolio-main-section-list-with-pictures-items">
             <img
               src="./images/potfolio-images/img6.jpg"
               alt="Изображение сайта"
               width="370"
               height="292"
+              class="portfolio-main-section-pictures"
             />
-            <p><span lang="en">Inspiration has no Borders</span></p>
-            <a href="">Веб-сайт</a>
+            <p class="portfolio-main-section-pictures-description">
+              <span lang="en">Inspiration has no Borders</span>
+            </p>
+            <a href="" class="portfolio-main-section-list-links">Веб-сайт</a>
           </li>
-          <li>
+          <li class="portfolio-main-section-list-with-pictures-items">
             <img
               src="./images/potfolio-images/img7.jpg"
               alt="Изображение журнала"
               width="370"
-              height="260"
+              height="292"
+              class="portfolio-main-section-pictures"
             />
-            <p>Издание <span lang="en">Limited Edition</span></p>
-            <a href="">Дизайн</a>
+            <p class="portfolio-main-section-pictures-description">
+              Издание <span lang="en">Limited Edition</span>
+            </p>
+            <a href="" class="portfolio-main-section-list-links">Дизайн</a>
           </li>
-          <li>
+          <li class="portfolio-main-section-list-with-pictures-items">
             <img
               src="./images/potfolio-images/img8.jpg"
               alt="Изображение бирки с логотипом"
               width="370"
               height="292"
+              class="portfolio-main-section-pictures"
             />
-            <p>Проект <span lang="en">LAB</span></p>
-            <a href="">Маркетинг</a>
+            <p class="portfolio-main-section-pictures-description">
+              Проект <span lang="en">LAB</span>
+            </p>
+            <a href="" class="portfolio-main-section-list-links">Маркетинг</a>
           </li>
-          <li>
+          <li class="portfolio-main-section-list-with-pictures-items">
             <img
               src="./images/potfolio-images/img9.jpg"
               alt="Работа за компьютером"
               width="270"
               height="292"
+              class="portfolio-main-section-pictures"
             />
-            <p><span lang="en">Growing Business</span></p>
-            <a href="">Приложение</a>
+            <p class="portfolio-main-section-pictures-description">
+              <span lang="en">Growing Business</span>
+            </p>
+            <a href="" class="portfolio-main-section-list-links">Приложение</a>
           </li>
         </ul>
       </section>
