--- a/portfolio.html
+++ b/portfolio.html
@@ -51,33 +51,31 @@
         <ul class="portfolio-main-section-list-with-buttons">
           <li>
             <button type="button" class="portfolio-main-section-button-blue">
-              <a href="" class="portfolio-main-section-buttons-text">Все</a>
+              <span class="portfolio-main-section-buttons-text"> Все </span>
             </button>
           </li>
           <li>
             <button type="button" class="portfolio-main-section-button">
-              <a href="" class="portfolio-main-section-buttons-text"
-                >Веб-сайты</a
+              <span class="portfolio-main-section-buttons-text">
+                Веб-сайты
+              </span>
+            </button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-main-section-button">
+              <span class="portfolio-main-section-buttons-text"
+                >Приложения</span
               >
             </button>
           </li>
           <li>
             <button type="button" class="portfolio-main-section-button">
-              <a href="" class="portfolio-main-section-buttons-text"
-                >Приложения</a
-              >
+              <span class="portfolio-main-section-buttons-text">Дизайн</span>
             </button>
           </li>
           <li>
             <button type="button" class="portfolio-main-section-button">
-              <a href="" class="portfolio-main-section-buttons-text">Дизайн</a>
-            </button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-main-section-button">
-              <a href="" class="portfolio-main-section-buttons-text"
-                >Маркетинг</a
-              >
+              <span class="portfolio-main-section-buttons-text">Маркетинг</span>
             </button>
           </li>
         </ul>
