--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- header-->
-    <header>
+    <header class="main-file-header">
       <nav>
         <a href="index.html" lang="en" class="logo-text"
           ><span class="logo-part">Web</span>Studio</a
