--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,11 @@
           ><span class="logo-part">Web</span>Studio</a
         >
         <ul class="nav-list">
-          <li><a href="" class="portfolio-nav-list-element-1">Студия</a></li>
+          <li>
+            <a href="./index.html" class="portfolio-nav-list-element-1"
+              >Студия</a
+            >
+          </li>
           <li>
             <a href="./portfolio.html" class="portfolio-nav-list-element-2"
               >Портфолио</a
