--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             >
           </li>
           <li>
-            <a href="tel:+380961111111" class="tel-address-webstudio"
+            <a href="tel:+380961111111" class="tel-address-webstudio-header"
               >+38 096 111 11 11</a
             >
           </li>
